Add option to disable update notifications (fixes #156)

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -257,6 +257,15 @@
           </ul>
         </li>
       </ul>
+      <ul class="optionList">
+        <li>
+          <div>
+            <p data-i18n="settingNameUpdateNotification" class="option"></p>
+            <p data-i18n="settingDescriptionUpdateNotification" class="info"></p>
+          </div>
+          <input data-hierarchy="General" name="updateNotification" id="SettingUpdateNotification" class="toggleButton" type="checkbox"><label for="SettingUpdateNotification"></label>
+        </li>
+      </ul>
     </div>
 
     <div id="Gestures">
