reverted some changes which are planned from the upcoming beta + minor style fix

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -216,7 +216,7 @@
           </div>
           <input data-collapse="#directionsSettings" data-hierarchy="Gesture.Directions" name="display" id="SettingUpdate" class="toggleButton" type="checkbox"><label for="SettingUpdate"></label>
         </li>
-        <li class="noMargin noPadding">
+        <li class="noPadding">
           <ul class="optionList collapsable" id="directionsSettings">
             <li class="noMargin">
               <div>
