add front-end functionality for blacklist

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -32,6 +32,10 @@
     <symbol id="SVG-Extras" viewBox="0 0 7751 7379">
       <path d="M5121 2356l2409 402c266,44 268,52 79,243l-1717 1728 364 2414c40,266 33,271 -207,150l-2175 -1097 -2182 1093c-240,120 -247,115 -207,-150l370 -2410 -1713 -1740c-189,-191 -186,-199 79,-242l2405 -391 1120 -2167c124,-239 132,-239 255,0l1120 2167z"/>
     </symbol>
+
+    <symbol id="SVG-Blacklist" viewBox="0 0 64 64">
+      <path d="M32 2a30 30 0 1 0 30 30A30 30 0 0 0 32 2zm0 7a22.9 22.9 0 0 1 13.6 4.5L13.5 45.6A23 23 0 0 1 32 9zm0 46a22.9 22.9 0 0 1-13.6-4.5l32.1-32.1A23 23 0 0 1 32 55z"/>
+    </symbol>
   </svg>
 
   <div id ="Sidebar">
@@ -56,6 +60,12 @@
         <a href="extras.html" target="Content">
           <svg class="nav-item-symbol"> <use xlink:href="#SVG-Extras"/> </svg>
           <span class="nav-item-label" data-i18n="navigationExtras"></span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="blacklist.html" target="Content">
+          <svg class="nav-item-symbol"> <use xlink:href="#SVG-Blacklist"/></svg>
+          <span class="nav-item-label">Blacklist</span>
         </a>
       </li>
       <li class="nav-item">
