--- a/src/ui/html/blacklist.html
+++ b/src/ui/html/blacklist.html
@@ -30,17 +30,12 @@
       <u data-i18n="explanationBlacklistHeading"></u>
       <span data-i18n="explanationBlacklistText"></span>
     </p>
-    <div class="option-list">
-      <section class="blacklist">
-        <div class="ol-label">
-          <label data-i18n="blacklistNameWebsiteLabel" for="bl-input" class="bl-label"></label>
-          <input id="bl-input" class="input-field bl-input" pattern="[(http(s)?):\/\/(www\.)?a-zA-Z0-9@:%._\+~#=]{2,256}\.[a-zA-Z-0-9]{2,256}\b([-a-zA-Z0-9@:%_\+.~#?&//=*]*)">
-        </div>
-        <button data-i18n="blacklistNameAdd" class="button bl-add" id="bl-add" type="button"></button>
-        <span class="bl-error" id="bl-error"></span>
-        <div class="bl-list" id="bl-list"></div>
-      </section>
+    <div class="bl-insert">
+      <input id="blAddressInput" class="input-field bl-input">
+      <button data-i18n="blacklistNameAdd" class="button bl-add" id="blAddEntry" type="button"></button>
     </div>
+    <!--<span class="bl-error" id="bl-error"></span>-->
+    <div class="bl-list" id="blList"></div>
   </main>
 </body>
 </html>
