--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -15,29 +15,6 @@
 </head>
 
 <body>
-  <!-- PRE-DEFINE ALL SVG SYMBOLS -->
-  <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-    <symbol id="SVG-Settings" viewBox="0 0 100 100">
-      <path d="M50 73c-12 0-23-11-23-23 0-12 11-23 23-23 12 0 23 11 23 23 0 12-11 23-23 23zm50-29c0-2-1-2-2-2l-10 0c-1-5-3-9-5-13l7-7c1-1 1-2 0-3l-9-9c-1-1-2-1-3 0l-7 7c-4-2-8-4-13-5l0-10c0-1 0-2-2-2l-12 0c-2 0-2 1-2 2l0 10c-5 1-9 3-13 5l-7-7c-1-1-2-1-3 0l-9 9c-1 1-1 2 0 3l7 7c-2 4-4 8-5 13l-10 0c-1 0-2 0-2 2l0 12c0 2 1 2 2 2l10 0c1 5 3 9 5 13l-7 7c-1 1-1 2 0 3l9 9c1 1 2 1 3 0l7-7c4 2 8 4 13 5l0 10c0 1 0 2 2 2l12 0c2 0 2-1 2-2l0-10c5-1 9-3 13-5l7 7c1 1 2 1 3 0l9-9c1-1 1-2 0-3l-7-7c2-4 4-8 5-13l10 0c1 0 2 0 2-2l0-12z"/>
-    </symbol>
-
-    <symbol id="SVG-Gesture" viewBox="0 0 1379 1379">
-      <path d="M279 769l0 200c-15,0 -31,-6 -43,-18l-218 -218c-24,-24 -24,-63 0,-87l218 -218c12,-12 28,-18 43,-18l0 201 332 0 0 -332 -201 0c0,-15 6,-31 18,-43l218 -218c24,-24 63,-24 87,0l218 218c12,12 18,28 18,43l-200 0 0 332 331 0 0 -201c16,0 32,6 43,18l219 218c23,24 23,63 0,87l-219 218c-11,12 -27,18 -43,18l0 -200 -331 0 0 331 200 0c0,16 -6,32 -18,43l-218 219c-24,23 -63,23 -87,0l-218 -219c-12,-11 -18,-27 -18,-43l201 0 0 -331 -332 0z"/>
-    </symbol>
-
-    <symbol id="SVG-Info" viewBox="0 0 4200 4200">
-      <path d="M644 2703c79,193 196,365 341,512 147,145 319,262 512,341 185,78 389,120 603,120 214,0 418,-42 603,-120 193,-79 366,-196 512,-341 145,-147 262,-319 341,-512 78,-185 120,-389 120,-603 0,-214 -42,-418 -120,-603 -79,-193 -196,-365 -341,-512 -146,-145 -319,-262 -512,-341 -185,-78 -389,-120 -603,-120 -214,0 -418,42 -603,120 -193,79 -365,196 -512,341 -145,147 -262,319 -341,512 -78,185 -120,389 -120,603 0,214 42,418 120,603zm1454 -1119c-104,0 -209,-23 -261,-73 0,-1 -1,-1 -5,-5l0 0c-50,-52 -74,-146 -74,-238 1,-91 27,-186 75,-238l0 0 5 -4c52,-51 158,-76 262,-76 103,0 210,24 262,73l0 0c2,3 6,5 9,9 48,52 71,145 71,235 -1,89 -26,182 -73,234 -3,3 -6,6 -9,9 -52,48 -160,74 -262,74l0 0zm-305 1520c0,149 212,147 294,147 12,0 -23,0 11,0 35,0 0,0 12,0 82,0 293,2 293,-147 0,-352 0,-704 0,-1056 0,-150 -222,-149 -298,-149l-13 0c-77,0 -299,-1 -299,149 0,352 0,704 0,1056zm-496 -2945c248,-102 519,-159 803,-159 284,0 555,57 803,159 257,107 489,262 682,456 194,193 349,425 456,682 102,248 159,519 159,803 0,284 -57,555 -159,803 -107,257 -262,489 -456,682 -193,194 -425,349 -682,456 -248,102 -519,159 -803,159 -284,0 -555,-57 -803,-159 -257,-107 -489,-262 -682,-456 -194,-193 -349,-425 -456,-682 -102,-248 -159,-519 -159,-803 0,-284 57,-555 159,-803 107,-257 262,-489 456,-682 193,-194 425,-349 682,-456z"/>
-    </symbol>
-
-    <symbol id="SVG-Extras" viewBox="0 0 7751 7379">
-      <path d="M5121 2356l2409 402c266,44 268,52 79,243l-1717 1728 364 2414c40,266 33,271 -207,150l-2175 -1097 -2182 1093c-240,120 -247,115 -207,-150l370 -2410 -1713 -1740c-189,-191 -186,-199 79,-242l2405 -391 1120 -2167c124,-239 132,-239 255,0l1120 2167z"/>
-    </symbol>
-
-    <symbol id="SVG-Blacklist" viewBox="0 0 64 64">
-      <path d="M32 2a30 30 0 1 0 30 30A30 30 0 0 0 32 2zm0 7a22.9 22.9 0 0 1 13.6 4.5L13.5 45.6A23 23 0 0 1 32 9zm0 46a22.9 22.9 0 0 1-13.6-4.5l32.1-32.1A23 23 0 0 1 32 55z"/>
-    </symbol>
-  </svg>
-
   <div id ="Sidebar">
     <h1>
       <img src="../../res/icons/iconx96.png">
@@ -46,31 +23,31 @@
     <ul class="navigation">
       <li class="nav-item">
         <a href="settings.html" target="Content">
-          <svg class="nav-item-symbol"> <use xlink:href="#SVG-Settings"/> </svg>
+          <span class="nav-item-symbol icon-gear"></span>
           <span class="nav-item-label" data-i18n="navigationSettings"></span>
         </a>
       </li>
       <li class="nav-item">
         <a href="gestures.html" target="Content">
-          <svg class="nav-item-symbol"> <use xlink:href="#SVG-Gesture"/> </svg>
+          <span class="nav-item-symbol icon-arrows"></span>
           <span class="nav-item-label" data-i18n="navigationGestures"></span>
         </a>
       </li>
       <li class="nav-item">
         <a href="extras.html" target="Content">
-          <svg class="nav-item-symbol"> <use xlink:href="#SVG-Extras"/> </svg>
+          <span class="nav-item-symbol icon-star"></span>
           <span class="nav-item-label" data-i18n="navigationExtras"></span>
         </a>
       </li>
       <li class="nav-item">
         <a href="blacklist.html" target="Content">
-          <svg class="nav-item-symbol"> <use xlink:href="#SVG-Blacklist"/></svg>
+          <span class="nav-item-symbol icon-list"></span>
           <span class="nav-item-label">Blacklist</span>
         </a>
       </li>
       <li class="nav-item">
         <a href="about.html" target="Content">
-          <svg class="nav-item-symbol"> <use xlink:href="#SVG-Info"/> </svg>
+          <span class="nav-item-symbol icon-info"></span>
           <span class="nav-item-label" data-i18n="navigationAbout"></span>
         </a>
       </li>
