--- a/src/ui/html/about.html
+++ b/src/ui/html/about.html
@@ -38,7 +38,7 @@
         <span data-i18n="aboutRestore"></span>
         <input type="file" id="restoreButton" name="files" accept=".json" hidden>
       </label>
-      <button id="resetButton" data-i18n="aboutReset" class="button"></button>
+      <button id="resetButton" data-i18n="aboutReset" class="button danger"></button>
     </div>
   </main>
 </body>
