--- a/src/ui/html/blacklist.html
+++ b/src/ui/html/blacklist.html
@@ -32,7 +32,7 @@
     </p>
     <div class="bl-insert">
       <input id="blAddressInput" class="input-field bl-addAddress">
-      <button data-i18n="blacklistNameAdd" class="button bl-addButton" id="blAddEntry" type="button"></button>
+      <button data-i18n="blacklistNameAdd" class="bl-add-button" id="blAddEntry" type="button"></button>
     </div>
     <ul class="blacklist" id="blacklist"></ul>
   </main>
