add option to change theme, add css variables

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Gesturefy</title>
   <link rel="icon" type="image/png" href="../../res/icons/iconx32.png" sizes="16x16">
+  <link rel="stylesheet" id="themeStylesheet">
   <link rel="stylesheet" href="../css/layout.css">
   <link rel="stylesheet" href="../css/index.css">
   <link rel="stylesheet" href="../css/modules/overlay.css">
@@ -52,6 +53,13 @@
         </a>
       </li>
     </ul>
+
+    <div class="themes">
+      <input class="theme-checkbox" id="themeCheckbox" type="checkbox">
+      <label for="themeCheckbox" class="button theme-value" id="themeValue">Theme: DarkerFuck</label>
+      <div class="theme-values" id="themeValues"></div>
+    </div>
+
   </div>
 
   <iframe id="Content" name="Content" height="100%" src="settings.html"></iframe>
