restructured option files

--- a/src/ui/html/content/blacklist.html
+++ b/src/ui/html/content/blacklist.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../css/layout.css">
-  <link rel="stylesheet" href="../css/content.css">
-  <link rel="stylesheet" href="../css/blacklist.css">
+  <link rel="stylesheet" href="../../css/layout.css">
+  <link rel="stylesheet" href="../../css/content.css">
+  <link rel="stylesheet" href="../../css/blacklist.css">
 
-  <script src="../js/blacklist.js" defer></script>
+  <script src="../../js/content.js" defer></script>
+  <script src="../../js/content/blacklist.js" defer></script>
 </head>
 <body>
 
