--- a/src/ui/html/content/extras.html
+++ b/src/ui/html/content/extras.html
@@ -2,12 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../css/layout.css">
-  <link rel="stylesheet" href="../css/content.css">
+  <link rel="stylesheet" href="../../css/layout.css">
+  <link rel="stylesheet" href="../../css/content.css">
 
-  <script src="../js/modules/overlay.js" defer></script>
-  <script src="../js/modules/command-bar.js" defer></script>
-  <script src="../js/extras.js" defer></script>
+  <script src="../../js/modules/overlay.js" defer></script>
+  <script src="../../js/modules/command-bar.js" defer></script>
+  <script src="../../js/content.js" defer></script>
+  <script src="../../js/content/extras.js" defer></script>
 </head>
 
 <body>
