--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -23,31 +23,31 @@
     </h1>
     <ul class="navigation">
       <li class="nav-item">
-        <a href="settings.html" target="Content">
+        <a href="content/settings.html" target="Content">
           <span class="nav-item-symbol icon-gear"></span>
           <span class="nav-item-label" data-i18n="navigationSettings"></span>
         </a>
       </li>
       <li class="nav-item">
-        <a href="gestures.html" target="Content">
+        <a href="content/gestures.html" target="Content">
           <span class="nav-item-symbol icon-arrows"></span>
           <span class="nav-item-label" data-i18n="navigationGestures"></span>
         </a>
       </li>
       <li class="nav-item">
-        <a href="extras.html" target="Content">
+        <a href="content/extras.html" target="Content">
           <span class="nav-item-symbol icon-star"></span>
           <span class="nav-item-label" data-i18n="navigationExtras"></span>
         </a>
       </li>
       <li class="nav-item">
-        <a href="blacklist.html" target="Content">
+        <a href="content/blacklist.html" target="Content">
           <span class="nav-item-symbol icon-list"></span>
           <span class="nav-item-label">Blacklist</span>
         </a>
       </li>
       <li class="nav-item">
-        <a href="about.html" target="Content">
+        <a href="content/about.html" target="Content">
           <span class="nav-item-symbol icon-info"></span>
           <span class="nav-item-label" data-i18n="navigationAbout"></span>
         </a>
@@ -62,7 +62,7 @@
 
   </div>
 
-  <iframe id="Content" name="Content" height="100%" src="settings.html"></iframe>
+  <iframe id="Content" name="Content" height="100%" src="content/settings.html"></iframe>
 
   <template id="CommandSettings">
     <template data-commands="NewTab">
