--- a/src/ui/html/content/about.html
+++ b/src/ui/html/content/about.html
@@ -2,10 +2,11 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../css/layout.css">
-  <link rel="stylesheet" href="../css/content.css">
-  
-  <script src="../js/about.js" defer></script>
+  <link rel="stylesheet" href="../../css/layout.css">
+  <link rel="stylesheet" href="../../css/content.css">
+
+  <script src="../../js/content.js" defer></script>
+  <script src="../../js/content/about.js" defer></script>
 </head>
 
 <body>
